--- a/package.json
+++ b/package.json
@@ -9,20 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "14.2.14",
     "react": "^18",
+    "react-daisyui": "^5.0.0",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.2",
     "axios": "^1.7.7",
+    "daisyui": "^4.12.11",
     "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
+    "openai": "^4.67.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^5.4.8"
   }
 }
