--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-next": "14.2.14",
     "openai": "^4.67.1",
     "postcss": "^8",
+    "react-google-charts": "^5.1.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5",
